# Postgres_Course_Work

./: README.md  config.py  main.py  pyproject.toml
src/: parsing_hh.py
tests/: conftest.py  test_get_api_hh.py  test_json_saver.py
