[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["ilya <ilyamalahov038@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
